src/data/report/report.css
body {
  font-family: "Segoe UI", Tahoma, Helvetica, "Sans-Serif";
  overflow: hidden;
  font-size: 15px;
  background-color: white;
  margin: 0;
}
table {
  font-size: 13px;
  padding-right: 28px;
}
label {
  display: inline-block;
  width: 100%;
  text-align: left;
}

#border-b, #border-l, #border-r {
  position: fixed;
  background: #548DD4;
  z-index: 10;
}
#border-b {
  left: 0;
  right: 0;
  bottom: 0;
  height: 3px;
}

#border-l {
  left: 0;
  top: 34px;
  bottom: 0;
  width: 3px;
}
#border-r {
  right: 0;
  top: 34px;
  bottom: 0;
  width: 3px;
}

.tabs {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  background-color: white;
  height: 32px;
  border: 3px #548DD4;
  border-bottom-style: solid;
}
.tab {
  -moz-user-select: none;
  display: inline-block;
  width: 121px;
  height: 26px;
  line-height: 22px;
  text-align: center;
  cursor: pointer;
  color: white;
  background-color: #548DD4;
  margin-right: -1px;
  border: solid 3px;
  border-color: #548DD4;
  border-bottom-style: none;
}
.tab[selected] {
  color: black;
  height: 32px;
  background-color: white;
}

.tabpanels {
  position: relative;
  margin-top: 35px;
}
.tabpanel {
  display: none;
  position: relative;
  margin: 15px;
  width: 100%;
  height: 194px;
}
.tabpanel[selected] {
  display: block;
}
.download-item {
  margin-left: -12px;
  padding-left: 12px;
  height: 62px;
  border-bottom: solid 1px #A7C2E9;
  font-size: 12px;
  width: 381px;
}
.download-item span {
  display: block; 
  width: 272px; 
  margin: 0 10px 1px 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  line-height: 18px;
}
.progress-outer {
  background: #BEBEBE;
  height: 11px;
  width: 272px;
  margin: 10px 0 3px 10px;
}
.progress-inner {
  background: #548DD4;
  width: 0%;
  height: 100%;
}
.progress-inner[type="inactive"] {
  background: #FF6A00;
}
#top-text {
   margin-bottom: -6px;
}
.d-content {
  display: none;
}
.nd-content {
  padding: 15% 0;
  line-height: 0;
  text-align: center;
  margin-left: -32px;
}
.d-footer {
  position: absolute; 
  left: -15px; 
  bottom: -19px; 
  color: white; 
  background-color: #548DD4;
  width: 100%; 
  height: 28px; 
  line-height: 25px; 
  text-align: center;
  cursor: pointer;
}

.box {
  text-align: center;
  min-height: 18px;
  min-width: 18px;
}
.checkbox span,
.img {
  display: block;
}
.img:before {
  display: block;
  content: "";
  width: 16px;
  height: 16px;
  background: url("images.png") center center;
  background-repeat: no-repeat;
}
.checkbox span {
  min-height: 20px;
  min-width: 20px;
}
.checkbox input {
  display: none;
}
.checkbox input:checked + span {
  background-image: url("checkmark.png");
  background-position: center center;
  background-repeat: no-repeat;
}
.checkboxTD,
.list,
.button {
  cursor: pointer;
  min-height: 20px;
  min-width: 20px;
  border: 1px solid rgba(140,183,234,.5);
  background-image: linear-gradient(rgba(244,248,253,.5), rgba(244,248,253,.3));
}
.button:before {
  margin: 2px;
}
.button:hover {
  background-image: linear-gradient(rgba(190,215,243,.5), rgba(190,215,243,.3));
}
.button:active {
  background-image: linear-gradient(rgba(140,183,234,.5), rgba(140,183,234,.3));
}

#embed-button:before {
  background-position: 0 center;
}
#tools-button:before {
  background-position: -16px center;
}
#download-button {
  display: block;
  border-radius: 2px;
  border: 1px solid transparent;
  background-image: url("open.png");
  background-repeat: no-repeat;
  background-position: center 8px;
  width: 128px;
  height: 131px;
  line-height: 238px;
  margin-top: 4px;
}
#formats-button {
  opacity: 0.5;
  transition: background-color 0.1s;
  border-radius: 2px;
  border: 1px solid transparent;
  margin-bottom: -37px;
  padding: 5px 15px 30px;
}
#download-button[type="active"] {
  background-image: url("download.png");
}
#formats-button[type="active"] {
  opacity: 1;
}
#formats-button:hover[type="active"],
#download-button:hover {
  background-color: #CCE0FF;
  border: 1px solid #5C9DFF;
}
.cancel {
  opacity: 0.5;
}
.cancel:hover {
  opacity: 1;
}

.list {
  display: inline-block;
  padding: 2px 13px 1px 3px;
}
#video-list,
#format-list,
#download-list {
  text-align: left;
  background: url("dropdown.png") right center;
  background-repeat: no-repeat;
}
#video-addition,
#format-addition,
#download-addition {
  margin-top: -1px;
  display: none;
}
#video-addition,
#download-addition {
  margin-bottom: 10px;
}
#format-addition {
  margin-bottom: 29px;
}

#download-list,
#download-addition {
  margin-right: -1px;
}

